-Added the Exit Button and Splash Screen -Changed the files from dos2unix
git-svn-id: https://gforge.ti.com/svn/qt-emb-demos/trunk/qtembwidget@3 1ba5f8a7-35bc-45e8-99e9-16a0928699f9

--- a/examples/catalog_ti/catalog.qrc
+++ b/examples/catalog_ti/catalog.qrc
@@ -3,5 +3,6 @@
         <file>brushedmetal.png</file>
         <file>catalog.css</file>
         <file>qtlogo-16.png</file>
+        <file>QtEmbeddedSplash.png</file>
     </qresource>
 </RCC>
